src/test/ui/error-codes/E0308.rs
#![feature(intrinsics)]

extern "rust-intrinsic" {
    fn size_of<T>(); //~ ERROR E0308
}

fn main() {
}
